# cpp-project-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  changeProjectName  format
.github/workflows/: ccpp.yml
doc/: git-init.md
include/: factorial.h
scripts/: build  changeProjectName  format
src/: factorial.cpp  main.cpp
test/: CMakeLists.txt  bench.cpp  runTests  tests.cpp
